<resources>
    <string name="app_name">CoVacMis</string>
    <string name="date_of_birth_dd_mm_yyyy">D.O.B(DD/MM/YYYY)</string>
    <string name="sign_up">SIGN UP</string>
    <string name="as_individual">As Individual</string>
    <string name="as_parent">As Parent</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="healthcare_ins_name">HealthCare Ins. Name</string>
    <string name="log_in">LOG IN</string>
    <string name="AppLogo">App Logo</string>
    <string name="vaccinename">VaccineName</string>
    <string name="combination">Combination:</string>
    <string name="phone_no">Phone No.</string>
</resources>