<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientwp"
    tools:context=".ParentSignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="37dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#D897E2"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/constellations"
        android:maxWidth="311dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:text="@string/as_individual"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="155dp"
            android:layout_height="47dp"
            android:checked="true"
            android:text="@string/as_parent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </RadioGroup>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="#999FC5EF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textColor="#0018C4"
        android:textColorHint="#0661C8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

<EditText
    android:id="@+id/editText4"
    android:layout_width="281dp"
    android:layout_height="47dp"
    android:layout_marginTop="8dp"
    android:background="#999FC5EF"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/username"
    android:inputType="text"
    android:text=""
    android:textColor="#0E24A9"
    android:textColorHint="#0661C8"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/editText3"
    app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="#999FC5EF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#0E24A9"
        android:textColorHint="#0661C8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="#999FC5EF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mobile_no"
        android:inputType="phone"
        android:textColor="#0E24A9"
        android:textColorHint="#0661C8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:background="#999FC5EF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/date_of_birth_dd_mm_yyyy"
        android:inputType="number"
        android:textColor="#0E24A9"
        android:textColorHint="#0661C8"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText6"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:clickable="true"
        android:src="@drawable/baseline_calendar_month_24"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />


    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="330dp"
        android:layout_height="47dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/constellations"
        android:maxWidth="311dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:text="@string/male"
            android:textColor="@color/white"
            android:checked="true"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:checked="true"
            android:text="@string/female"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:text="@string/others"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        app:backgroundTint="#0A6D9D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="307dp"
        android:layout_height="99dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inslidelogonew" />


</androidx.constraintlayout.widget.ConstraintLayout>

